# inmobiliarIA-jupiter-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README-UV.md  README.md  conftest.py  locations.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: _deploy-service.yml  coverage.yml  deploy-all.yml  deploy-api-gateway.yml  deploy-data-ingestion.yml  deploy-frontend.yml  deploy-platform.yml  deploy-process-user-prompt.yml  deploy-ranking-and-rendering.yml  deploy-results-api.yml  deploy-vector-query.yml  lint.yml  tests.yml  verify.yml
Old/data/: embeddings.json  normalized-descriptions.json
data/: parsed-properties.json
docs/: Architecture.md  DESARROLLO.md  Diagrams.md  VECTOR_QUERY.md  architecture2.md  deployment-status.md
embeddings/: pyproject.toml
embeddings/src/embeddings/: __init__.py  config.py  gemini.py
infra/: docker-compose.yml
infra/elasticmq/: elasticmq.conf
infra/pulumi/: .gitignore  Makefile  README.md  pyproject.toml
infra/pulumi/_bootstrap/: Pulumi.yaml  __main__.py
infra/pulumi/_shared/: __init__.py  naming.py  refs.py  tags.py
infra/pulumi/api-gateway/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/data-ingestion/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/frontend/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/github-oidc/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/platform/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/process-user-prompt/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/ranking-and-rendering/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/pulumi/results-api/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  handler.py
infra/pulumi/vector-query/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
prompts/: generate-summary-prompt.md
scripts/: extract-property-data.py  generate-embeddings.py  generate-summary.py
scripts/cloud/: create_qdrant_indexes.py
scripts/dev/: bootstrap_qdrant.py  e2e_search.py  trigger_ingestion.py
services/api_gateway/: Dockerfile.bak  README.md  pyproject.toml
services/api_gateway/src/api_gateway/: __init__.py  ddb_client.py  main.py  results_store.py  routes.py  sqs_publisher.py
services/data_ingestion/: Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
services/data_ingestion/.checkpoints/: embed-checkpoint.json  extract-checkpoint.json  normalize-checkpoint.json
services/data_ingestion/data/source_html/arganzuela/: 1.html  3.html
services/data_ingestion/data/source_html/barajas/: 1.html  2.html  3.html
services/data_ingestion/data/source_html/barrio_de_salamanca/: 2.html
services/data_ingestion/data/source_html/carabanchel/: 1.html  3.html
services/data_ingestion/data/source_html/chamartin/: 2.html
services/data_ingestion/data/source_html/chamberi/: 1.html  2.html
services/data_ingestion/data/source_html/ciudad_lineal/: 3.html
services/data_ingestion/data/source_html/fuencarral/: 2.html
services/data_ingestion/data/source_html/hortaleza/: 1.html  2.html  3.html
services/data_ingestion/data/source_html/latina/: 1.html  3.html
services/data_ingestion/data/source_html/moncloa/: 1.html  2.html  3.html
services/data_ingestion/data/source_html/moratalaz/: 2.html  4.html
services/data_ingestion/data/source_html/puente_de_vallecas/: 1.html  2.html  3.html
services/data_ingestion/data/source_html/san_blas/: 1.html  2.html
services/data_ingestion/data/source_html/villaverde/: 1.html  2.html  3.html
services/data_ingestion/src/data_ingestion/: __init__.py  embeddings.py  extractor.py  handler.py  html_parser.py  lambda_handler.py  normalization.py  qdrant_client.py  worker.py
services/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
services/process_user_prompt/: Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
services/process_user_prompt/src/process_user_prompt/: __init__.py  handler.py  lambda_handler.py  llm.py  llm_client.py  system-prompt.md  worker.py
services/ranking_and_rendering/: Dockerfile.bak  Dockerfile.lambda  README.md  pyproject.toml
services/ranking_and_rendering/src/ranking_and_rendering/: Desarrollo.md  __init__.py  handler.py  lambda_handler.py  qdrant_client.py  qdrant_store.py  ranker.py  ranking_rules.md  ranking_rules.py  worker.py
services/tracer/: Dockerfile  README.md  pyproject.toml
services/tracer/src/tracer/: collector.py  main.py  store.py
services/tracer/src/tracer/static/: index.html
services/vector_query/: Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
services/vector_query/src/vector_query/: __init__.py  embeddings.py  filters.py  handler.py  lambda_handler.py  qdrant_client.py  qdrant_store.py  worker.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  constants.py  ddb.py  embeddings.py  location_utils.py  schemas.py  settings.py  sqs.py
tests/: test_placeholder.py
tests/api_gateway/: test_apigateway_main.py  test_apigateway_results_store.py  test_apigateway_routes.py
tests/data_ingestion/: test_data_ingestion_embed_all.py  test_data_ingestion_extract_all.py  test_data_ingestion_handler.py  test_data_ingestion_ingest.py  test_data_ingestion_normalize_all.py  test_embed_all.py  test_extract_all.py  test_handler.py  test_ingest.py  test_normalize_all.py
tests/process_user_prompt/: test_handler.py  test_llm.py  test_process_user_prompt_handler.py  test_process_user_prompt_lambda_handler.py  test_process_user_prompt_llm.py  test_process_user_prompt_schemas.py  test_process_user_prompt_worker.py  test_schemas.py  test_worker.py
tests/ranking_rendering/: test_ranker.py  test_ranking_rendering_handler.py  test_ranking_rendering_qdrant_store.py  test_ranking_rendering_ranker.py  test_ranking_rendering_ranking_rules.py  test_ranking_rendering_worker.py
tests/shared/: test_shared_ddb.py
tests/tracer/: test_tracer_collector.py  test_tracer_main.py  test_tracer_store.py
tests/vector_query/: test_filters.py  test_vector_query_filters.py  test_vector_query_handler.py  test_vector_query_qdrant_store.py  test_vector_query_worker.py
(+76 files in other folders)
