[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inmobiliarIA"
version = "1.0.0"
description = "Property scraper and FastAPI application for real estate data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pylint>=3.0.3",
    "flake8>=6.1.0",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "types-requests>=2.31.0.10",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pylint>=3.0.3",
    "flake8>=6.1.0",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "types-requests>=2.31.0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 127
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true
known_first_party = ["inmobiliarIA"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 127

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing"
asyncio_mode = "auto"
