[project]
name = "inmobiliarIA"
version = "1.0.0"
description = "Property scraper and FastAPI application for real estate data"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.13.3", "python-dotenv>=1.2.2", "shared"]

[tool.uv.workspace]
members = ["shared", "services/*"]
exclude = ["services/frontend"]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "types-requests>=2.31.0.10",
]
scripts = [
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "lxml>=6.1.0",
]

# ─── Ruff: lint + isort ────────────────────────────────────────────────────────
[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
# E/W = pycodestyle  |  F = pyflakes  |  I = isort  |  B = flake8-bugbear
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["inmobiliarIA"]

# ─── Black: formatter ────────────────────────────────────────────────────────
[tool.black]
line-length = 127
target-version = ["py312"]

# ─── Mypy: static typing ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
# Pulumi stacks each ship a `__main__.py`; mypy can't disambiguate them under
# one project root. They're separate runtimes — not part of the service codebase.
exclude = ["infra/pulumi/"]

# ─── Pytest: testing ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
