[project]
name = "embeddings"
version = "0.1.0"
description = "Shared embedding wrapper (Gemini) used by vector_query and data_ingestion"
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai>=4.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embeddings"]
