[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas, SQS client, and settings for all services"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-settings>=2.5.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
