[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas, SQS client, and settings for all services"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-settings>=2.5.0",
    "boto3>=1.35.0",
    "qdrant-client>=1.12.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "rapidfuzz>=3.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
