[project]
name = "inmobiliaria-pulumi"
version = "0.1.0"
description = "Pulumi microstacks for the InmobiliarIA Júpiter cloud deployment"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.130",
    "pulumi-aws>=6.50",
    "pulumi-command>=1.0",
    "pulumi-docker-build>=0.0.11",
]

[tool.uv]
package = false
