[project]
name = "api_gateway"
version = "0.1.0"
description = "FastAPI entrypoint that fronts /search and /users in local dev (replaced by API Gateway in cloud)"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
