[project]
name = "data_ingestion"
version = "0.1.0"
description = "SQS worker: parses HTML properties, embeds them, writes to Qdrant (stubbed)"
requires-python = ">=3.10"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ingestion"]
