[project]
name = "data_ingestion"
version = "0.1.0"
description = "SQS worker: parses HTML properties, embeds them, writes to Qdrant (stubbed)"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.17.1",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ingestion"]
