[project]
name = "process_user_prompt"
version = "0.1.0"
description = "SQS worker: extracts structured fields from a natural-language prompt (stubbed)"
requires-python = ">=3.10"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/process_user_prompt"]
