[project]
name = "ranking_and_rendering"
version = "0.1.0"
description = "SQS worker: fetches full documents from Qdrant and ranks them against the request filters (stubbed)"
requires-python = ">=3.10"
dependencies = ["shared", "qdrant-client",]

[tool.uv.sources]
shared = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "services/ranking_and_rendering/src"
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ranking_and_rendering"]