[project]
name = "tracer"
version = "0.1.0"
description = "Local-only request tracer: follows docker logs and indexes by request_id"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "docker>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracer"]

[tool.hatch.build.targets.wheel.force-include]
"src/tracer/static" = "tracer/static"
