[project]
name = "vector_query"
version = "0.1.0"
description = "SQS worker: builds filters + embeddings, runs similarity search on Qdrant (stubbed)"
requires-python = ">=3.10"
dependencies = ["shared", "qdrant-client>=1.12,<2"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_query"]
